# Reasoning-BO

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
data/result/: comment_history.jsonl  experiment_analysis.json  messages.jsonl
playground/prompts/: 1_overview_generate.ipynb  2_initial_sampling.ipynb  3_optimization_loop.ipynb  4_generate_summary.ipynb  5_generate_conclusion.ipynb  5_generate_report.ipynb  prompt.ipynb  prompt_test_pipeline.ipynb
recipes/: bayesian_optimization.ipynb  notes_da_faithfulbo.ipynb  reasoning_bo_direct_arylation.ipynb
scripts/: experiment.py  start_notebook.sh  start_optimization.sh
src/agent/: notes_agent.py
src/agents/: __init__.py  kg_agent.py  milvus_agent.py  notes_agent.py
src/app/: config.py
src/bo/: models.py
src/config/: ackley_15d_config.json  ackley_config.json  buchwald_config.json  config.py  cpa_config.json  direct_arylation_config.json  direct_arylation_new_config.json  hartmann6_config.json  hartmann_config.json  levy_config.json  lunar_config.json  new_ackley_config.json  new_hartmann_config.json  new_levy_config.json  new_rosenbrock_config.json  rosenbrock_config.json  suzuki_config.json  suzuki_new_config.json
src/llms/: deepseek.py  local_lm.py  qwen.py  qwq.py
src/metrics/: __init__.py  chemistry.py
src/prompts/: base.py  test.py  test_prompts.json
src/tasks/: __init__.py  objective.py
src/utils/: jsonl.py  metric.py
test_results/: test.json  test_hartman6.csv  test_l2norm.csv
tests/: test_bomodel.py  test_database.py  test_openai.py  test_prompts.py
tests/models/: test_qwen.py  (+2 more)
(+21 files in other folders)
